--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "dependencies": {
     "core-js": "^3.6.4",
     "register-service-worker": "^1.6.2",
+    "tailwindcss": "^1.2.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5"
+    "vue-router": "^3.1.5",
+    "vue-tailwind": "^0.4.6",
+    "vue2-filters": "^0.10.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
